CreativeScrapyard/static/static/css/style.css
:root {
    --pri-color: #20c997;
    --pri-color-light: #BDEFE0;
    --pri-color-dark: #1BAA80;
}

.cxt-color {
    color: var(--pri-color-dark);
}

a {
    background: transparent;
    color: #292929;
    outline: none;
    text-decoration: none;
    vertical-align: baseline;
    margin: 0;
    padding: 0;
    -webkit-transition: all .3s ease-in;
    -moz-transition: all .3s ease-in;
    -ms-transition: all .3s ease-in;
    -o-transition: all .3s ease-in;
    transition: all .3s ease-in;
}

a:hover {
    text-decoration: none;
    color: var(--pri-color);
}

a:focus {
    outline: none;
}

.btn.focus,
.btn:focus {
    box-shadow: none !important;
}

html {
    overflow-y: scroll;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
}

ul {
    list-style: none;
}

html,
body {
    font-size: 16px;
    color: #292929;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    background: #fff;
    padding: 0;
    margin: 0;
}


/* */

.breadcrumb {
    padding: 0px;
    background: transparent;
}

.breadcrumb-item {
    text-transform: uppercase;
    font-size: 12px;
}

.breadcrumb-item a {
    color: var(--pri-color-dark);
}

.breadcrumb-item a:hover {
    color: #292929;
    text-decoration: none;
}

.infomain {
    text-align: left;
    padding-top: 15px;
}

.brand {
    float: left;
    width: 100%;
    color: #292929;
    font-size: 13px;
    font-weight: 600;
}

.brand span {
    color: #6d6d6d;
}

.brand span a {
    color: #6d6d6d;
}

.brand span a:hover {
    color: var(--pri-color);
}

.brand span.stock {
    color: #f8f6f7;
    background: #31a65d;
    padding: 5px;
}

.product-disarea .price {
    padding: 18px 0px;
    width: 100%;
    float: left;
    font-size: 24px;
    color: var(--pri-color);
}

.short-des {
    border-top: 1px solid #b8b8b8;
    border-bottom: 1px solid #b8b8b8;
    float: left;
    width: 100%;
    margin-bottom: 42px;
}

.short-des p {
    color: #4e4e4e;
    font-size: 13px;
    line-height: 20px;
    font-weight: 300;
    padding: 12px 0px;
}


/*------------FORM----------*/

.form-group {
    margin-bottom: 0px;
}

.form-control,
.form-control:focus {
    border-radius: 0px;
    box-shadow: none;
}

select {
    vertical-align: middle;
}

#form_buy {
    float: left;
    width: 100%;
    margin-top: 12px;
}

#form_buy .form-group {
    margin-top: 16px;
}

#form_buy label {
    font-size: 13px;
    font-weight: 600;
    color: #292929;
    width: 90px;
}

#form_buy #input-size,
#input-qty,
#input-color,
#form_buy select {
    font-size: 14px;
    color: #292929;
    font-weight: 300;
    border: 1px solid #bcbcbc;
    border-radius: 0px;
    display: inline-block;
}

#form_buy input {
    width: 62px;
}

#form_buy select {
    width: 196px;
    background: url(../img/icon-img/sell-down.jpg) no-repeat right 3px;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}

#addcart {
    background: var(--pri-color);
    font-size: 16px;
    font-weight: 700;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    color: #fff;
    padding: 0px 10px 0px 10px;
    border-radius: 0px;
    line-height: 45px;
    margin: 20px 0px;
    width: 140px;
    border-radius: 5px;
}

#addcart:hover {
    background: var(--pri-color-dark)
}

#buyItem {
    background: var(--pri-color);
    font-size: 16px;
    font-weight: 700;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    color: #fff;
    padding: 0px 10px 0px 10px;
    border-radius: 0px;
    line-height: 45px;
    margin: 20px 0px;
    width: 140px;
    border-radius: 5px;
}

#buyItem:hover {
    background: var(--pri-color-dark)
}


/* --- PINCODE BTN ---*/

.chkPincode {
    display: inline-block;
    /* border: 1px solid #bcbcbc; */
    border-radius: 5px;
    padding: 5px;
}

#input-pincode {
    display: inline-block;
    font-size: 14px;
    font-weight: 300;
    border: 0px;
    border-bottom: 1px solid var(--pri-color-dark);
    color: #000
}

#btn-chkPincode {
    background: var(--pri-color);
    font-size: 16px;
    font-weight: 700;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    color: #fff;
    line-height: 20px;
    border-radius: 5px;
    /* border: 1px solid #eb2424; */
}

#btn-chkPincode:hover {
    cursor: pointer;
    background: var(--pri-color-dark)
}


/* owl carousel*/

#sync2 .item {
    margin-top: 20px;
    opacity: 0.4;
    cursor: pointer;
}

#sync2 .current .item {
    opacity: 1;
}

.owl-theme .owl-nav [class*="owl-"] {
    transition: all 0.3s ease;
}

#sync2.owl-theme .owl-nav [class*="owl-"] {
    font-size: 20px;
    background: #000;
    padding: 2px;
    background: #000;
}

#sync2.owl-carousel .owl-nav .owl-prev {
    float: left;
    top: 45%;
    position: absolute;
    left: 0px;
}

#sync2.owl-carousel .owl-nav .owl-next {
    float: right;
    top: 45%;
    position: absolute;
    right: 0px;
}


/* Product-Tabs*/

.dis-tab {
    margin-top: 25px;
    margin-bottom: 25px;
    border: 1px solid #e6e6e6;
}

.resp-tabs-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
}

.dis-tab .resp-tabs-list {
    border-bottom: 1px solid #dbdbdb;
}

.dis-tab .resp-tabs-list li {
    font-size: 16px;
    padding: 12px 0px 18px;
    color: rgb(0, 0, 0);
}

.dis-tab .resp-tab-active {
    border: none;
    position: relative;
    text-decoration: underline;
}

.discription {
    padding: 30px 25px 30px;
}

.discription p {
    font-size: 14px;
    font-weight: 300;
    line-height: 24px;
    padding-bottom: 24px;
}

.discription table tr th {
    width: 40%;
}

.discription table tr td {
    width: 60%;
}

.addinfo {
    margin-top: 25px;
}

.addinfo th {
    font-size: 14px;
    color: #2f2f2f;
    font-weight: 600;
}

.addinfo td {
    font-size: 14px;
    color: #2f2f2f;
    font-weight: 300;
}

.addinfo.table td,
.addinfo.table th {
    padding: 1rem;
    letter-spacing: 0.5px;
}

.discription h3 {
    font-size: 24px;
    font-weight: 300;
}

.artist-photo img {
    float: left;
    width: 108px;
    height: 100px;
}

.artist-body {
    margin-left: 140px;
    margin-top: 15px;
}

.artist-body p {
    font-size: 14px;
    font-weight: 300;
    line-height: 24px;
    padding-bottom: 0px;
}


/* ---ARTIST PROD---- */

.same-artist>h2 {
    font-size: 24px;
    font-weight: 500;
    border-bottom: 1px solid #dbdbdb;
    padding-bottom: 15px;
}

#owl-artist-products {
    background-color: whitesmoke;
    /* border-bottom: 1px solid #dbdbdb; */
}

#owl-artist-products .product-thumb .item {
    margin: 3px;
}

#owl-artist-products .product-thumb .item img {
    display: block;
    width: 100%;
    height: auto;
}

#owl-artist-products.owl-carousel .owl-nav .owl-prev {
    float: left;
    top: 45%;
    position: absolute;
    left: -20px;
}

#owl-artist-products .owl-nav .owl-next {
    float: right;
    top: 45%;
    position: absolute;
    right: -20px;
}

#owl-artist-products.owl-theme .owl-nav [class*="owl-"] {
    font-size: 42px;
    padding: 0px;
    background: transparent;
    color: #292929;
}

#owl-artist-products.owl-theme .owl-nav [class*="owl-"]:hover {
    background: transparent;
    color: #e28989;
}


/* ---OTHER PROD---- */

.explore-items>h2 {
    font-size: 24px;
    font-weight: 500;
    border-bottom: 1px solid #dbdbdb;
    padding-bottom: 15px;
    margin-top: 25px;
}

.explore-items a {
    background: transparent;
    color: #292929;
    outline: none;
    text-decoration: none;
    vertical-align: baseline;
    margin: 0;
    padding: 0;
}

.caption .product-name {
    font-size: medium;
    padding: 8px 0px 8px 0px;
    border-bottom: 1px solid #dbdbdb;
    position: relative;
    text-decoration: none;
    color: #000
}

.caption .price {
    font-size: medium;
    color: var(--pri-color);
    margin: 8px 0px 8px 0px;
}

.product-thumb {
    display: block;
    padding: 5px;
    margin: 10px 8px 20px 8px;
    box-shadow: 0 0 10px #ccc;
    background-color: white;
}


/* Shopping Cart */

.cart-main {
    /* background-color: whitesmoke; */
}

.cart-item {}

.cart-image {
    /* padding-left: 0px;
    padding-right: 0px; */
}

.cart-image img {}

.cart-detail {
    padding-right: 0px
}

#cart_qty select {
    width: 50px;
    height: 34px;
    border: 1px solid #d2d2d2;
    border-radius: 4px;
    display: inline;
    padding: 0px;
    font-size: small;
    line-height: 0.0;
    color: #000;
    vertical-align: middle;
    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

.brd {
    border-top: 1px solid var(--pri-color);
    /* margin-top: 10px;
    margin-bottom: 10px; */
}

#cart-ord-btn {
    background-color: var(--pri-color);
    color: white
}

#cart-ord-btn:hover {
    background: var(--pri-color-dark)
}

.cartProductImg {}

.order-summary {
    background-color: whitesmoke;
    border-radius: 0px;
}

#place-ord-btn {
    background-color: var(--pri-color);
    color: white
}

#place-ord-btn:hover {
    background: var(--pri-color-dark)
}


/*  Checkout */

.your-order-table table th,
.your-order-table table td {
    border-bottom: 1px solid #dee2e6;
    color: #6f7172;
    font-size: 14px;
    text-align: left;
}

.your-order-table table th {
    border-top: medium none;
    color: #6f7172;
    font-weight: normal;
    text-align: left;
    vertical-align: middle;
    white-space: nowrap;
    width: 250px;
}

.your-order-table table tr.order-total td span {
    color: var(--pri-color);
    font-size: 18px;
    font-weight: 500;
}

#ord-track-btn {
    background-color: var(--pri-color);
    color: white;
}

#ord-track-btn:hover {
    background: var(--pri-color-dark)
}

#ord-view-btn {
    background-color: var(--pri-color);
    color: white;
}

#ord-view-btn:hover {
    background: var(--pri-color-dark)
}

.btn-cxt {
    display: inline-block;
    font-weight: 400;
    background-color: var(--pri-color);
    color: white;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0.25rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.btn-cxt:hover {
    background: var(--pri-color-dark)
}

.progress-bar {
    background-color: var(--pri-color-dark);
}

.progress-bar.inactive {
    color: var(--pri-color-dark);
    background-color: var(--pri-color-light);
}


/* -------- */


/* .secondary-img {
    left: 0;
    opacity: 0;
    position: absolute;
    top: 0;
    transition: all 0.4s ease 0s;
}

.product-thumb:hover .secondary-img {
    left: 0;
    opacity: 0;
    position: absolute;
    top: 0;
    opacity: 1;
} */


/* .product-thumb-img:hover {
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -ms-transition: all .5s;
    -o-transition: all .5s;
    transition: all .5s linear;
    /* -webkit-transition: all .5s ease-in;
    -moz-transition: all .5s ease-in;
    -ms-transition: all .5s ease-in;
    -o-transition: all .5s ease-in;
    transition: all .5s ease-in;} */

